# shellproject

./: README.md  shell项目简要开发文档.docx  答辩ppt.pptx
build-demo1-C_C_Qt_6_4_0-Debug/: CMakeCache.txt.prev  Makefile  a.txt  cmake_install.cmake  demo1  hello
demo1/: CMakeLists.txt  CommandLineParser.cpp  CommandLineParser.h  main.cpp  shellExecutor.cpp  shellExecutor.h
项目源码/: CommandLineParser.cpp  CommandLineParser.h  main.cpp  shellExecutor.cpp  shellExecutor.h
